syntax = "proto3";
option go_package = "github.com/ukama/ukama/systems/node/software/pb/gen";
package ukama.node.software.v1;
import "validator.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
service SoftwareService {
    rpc CreateSoftwareUpdate (CreateSoftwareUpdateRequest) returns (CreateSoftwareUpdateResponse);
    rpc GetLatestSoftwareUpdate (GetLatestSoftwareUpdateRequest) returns (GetLatestSoftwareUpdateResponse);

    rpc UpdateSoftware (UpdateSoftwareRequest) returns (UpdateSoftwareResponse);
}

message UpdateSoftwareRequest {
    string nodeId = 1;
    string tag = 2;
    string space = 3;
    string name = 5;
}

message UpdateSoftwareResponse {
    string message =1;

}
message CreateSoftwareUpdateRequest {
    string name = 1;
    string tag = 2;
    string space = 3;

}
message CreateSoftwareUpdateResponse {
    SoftwareUpdate software_update = 1;
}
message SoftwareUpdate {
    string id = 1 [(validator.field) = {uuid_ver: 4, string_not_empty: true}, json_name = "id"];
    string tag = 2;
    string space = 3;
    Status status = 4;
    string name = 5;
}

message GetLatestSoftwareUpdateRequest {
}
message GetLatestSoftwareUpdateResponse {
    SoftwareUpdate software_update = 1;
}



enum Status {
    Stable  = 0;
	Beta    = 1;
	Alpha   = 2;
}